# pydrinker

./: CHANGES.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
pydrinker/: dispatchers.py  exceptions.py  managers.py  message_translators.py  providers.py  routes.py  runners.py
samples/: one_file_gcp_consumer.py
tests/: test_dispatchers.py  test_managers.py  test_routes.py
