[tool.poetry]
name = "pydrinker"
version = "0.1.0"
description = "The most amazing lib to drink (consume) message from your queue provider of preference"
authors = ["Rafael Henrique da Silva Correia <rafael@abraseucodigo.com.br>"]
keywords = ["pub-sub", "queue", "consumer", "message-broker"]
readme = "README.md"
license = "LGPLv3"
include = ["LICENSE"]
repository = "https://github.com/rafaelhenrique/pydrinker"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
olist-loafer = "3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
